--- a/slide/profile/index.html
+++ b/slide/profile/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>タイトル</title>
+  <title>My Profile</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <link rel="stylesheet" type="text/css" href="../../assets/style/simple.css">
+  <link rel="stylesheet" type="text/css" href="../../assets/style/github.css">
   <style>
     @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
     /* Chromeでスライドを印刷するための設定 */
