--- a/slide/sample/index.html
+++ b/slide/sample/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Sample</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="robots" content="noindex,nofollow">
   <link rel="stylesheet" type="text/css" href="../../assets/style/simple.css">
   <style>
     @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
